--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
         "vue": "^3.1.4",
         "vue-template-compiler": "^2.6.10",
         "webpack-cli": "^4.7.2"
+    },
+    "dependencies": {
+        "coinbase-commerce-node": "^1.0.4"
     }
 }
